--- a/reeb_plot.ipynb
+++ b/reeb_plot.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reeb_class = reeb"
+    "r = reeb.Reeb(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,7 @@
     }
    ],
    "source": [
-    "pos = reeb_class.reeb.node_position(reeb, G=G)\n",
-    "reeb_class.reeb.plot_reeb(reeb, G, pos)"
+    "r.plot_reeb()"
    ]
   }
  ],
