--- a/notebooks/up_down_degree.ipynb
+++ b/notebooks/up_down_degree.ipynb
@@ -291,22 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 1, 1: 2, 2: 2, 3: 1, 4: 1, 5: 0, 6: 1, 7: 0}"
+       "8"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "down"
+    "len(Gf.nodes)"
    ]
   },
   {
