--- a/notebooks/reeb_plot.ipynb
+++ b/notebooks/reeb_plot.ipynb
@@ -830,9 +830,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -844,12 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "896ededc2562ed8c34e5f157358d1476f927df153b7f438b06ab6650204bd22f"
-   }
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
