--- a/docs/notebooks/reeb_basics.ipynb
+++ b/docs/notebooks/reeb_basics.ipynb
@@ -8,12 +8,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from cereeberus import ReebGraph"
+    "In this notebook, we'll be"
    ]
   },
   {
@@ -26,7 +24,9 @@
     "import cereeberus.data.ex_graphs as ex_graph\n",
     "import cereeberus.data.ex_reebgraphs as ex_rg\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "\n",
+    "\n",
+    "from cereeberus import ReebGraph"
    ]
   },
   {
