--- a/docs/notebooks/example_reeb_graphs.ipynb
+++ b/docs/notebooks/example_reeb_graphs.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Example Reeb graphs \n",
     "\n",
-    "In this notebook, we show the available example Reeb graphs from the [example Reeb graphs module](../modules/data/ex_reebgraphs.html). \n",
+    "In this notebook, we show the available example Reeb graphs from the [example Reeb graphs module](../modules/data/ex_reebgraphs.rst). \n",
     "\n"
    ]
   },
