optimization folder for ilp files

--- a/doc_source/optimization_folder/integer_linear_programming.ipynb
+++ b/doc_source/optimization_folder/integer_linear_programming.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# import the ilp file. Note it is in the same folder as this notebook, we will move it to the correct location later\n",
     "\n",
-    "import ilp"
+    "import doc_source.optimization_folder.ilp as ilp"
    ]
   },
   {
