--- a/doc_source/optimization_folder/linear_optimization_ILP_forms.ipynb
+++ b/doc_source/optimization_folder/linear_optimization_ILP_forms.ipynb
@@ -362,7 +362,7 @@
     "\n",
     "Then, we have:\n",
     "\n",
-    "$ \\sum_{i=1}^m d^{2n}_{f_{ij}} * (I_{{f^nf}_{ik}} - c_{ik})$ for all  $k = 1, 2, \\dots, p$."
+    "$ \\sum_{i=1}^m d^{2n}_{f_{ji}} * (I_{{f^nf}_{ik}} - c_{ik})$ for all  $k = 1, 2, \\dots, p$."
    ]
   },
   {
