--- a/doc_source/notebooks/interleaving_basics.ipynb
+++ b/doc_source/notebooks/interleaving_basics.ipynb
@@ -1363,7 +1363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "interleavingenv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
