Updating the draw function name to match others

--- a/doc_source/notebooks/compute_reeb.ipynb
+++ b/doc_source/notebooks/compute_reeb.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "86d760fa",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
     "T = Torus()\n",
     "T.generate_grid(grid_size = 4)\n",
     "T.assign_random_values(0,100, seed=1986)\n",
-    "T.plot()"
+    "T.draw()"
    ]
   },
   {
